content: rewrite 47 science/math/ML/CS orphan pages as substantive content
Rewrote across math (15), machine-learning (13), generative-ai (6),
data-structures (5), distributed-systems extension (3), java (1),
operations-research (1), and new computer-science-foundations (3) clusters.
Each page replaces auto-generated stub with ~150-200 lines of practical
content following the established pattern: frontmatter with cluster
assignment, real tags, related cross-links, hub anchoring, then
substantive body covering core concepts, practical workflow, common
failure patterns, and further reading.

Supports offline operation and RAG ingestion of the local corpus.