@@ -2,229 +2,371 @@
 canonical_id: 01KQ0P44RA716VK4MYYAJE3WMS
 title: Java Memory Management
 type: article
+cluster: java
+status: active
+date: '2026-04-26'
+summary: Java memory management — heap regions, garbage collectors, the modern GC
+  options (G1, ZGC, Shenandoah), and the practical tuning approaches that matter
+  for production JVM applications.
 tags:
-- memori
+- java
+- memory-management
 - gc
-- heap
-summary: 'The Managed Heap: The Labyrinth of Object Graphs The Heap is the primary
-  area where all dynamically allocated objects reside.'
-auto-generated: true
+- garbage-collection
+- jvm
+related:
+- MemoryArchitectures
+- MemoryManagementFundamentals
+hubs:
+- Java Hub
 ---
-# The Deep Dive
+# Java Memory Management
 
-For those of us who have moved past the introductory "what is the heap, what is the stack" phase, the standard textbook descriptions of Java memory management feel less like documentation and more like a quaint historical artifact. We are not merely concerned with *if* memory is managed, but *how* the management system fails, *where* the performance bottlenecks hide when the GC is doing its best, and *how* we can architect around its inherent unpredictability.
+The JVM manages memory automatically through garbage collection. Understanding what's happening — heap regions, GC algorithms, allocation patterns — is essential for diagnosing performance issues and avoiding common pitfalls.
 
-This tutorial is not a refresher. It is a deep, technical excavation into the mechanics, limitations, and advanced control surfaces of the Java Virtual Machine (JVM) memory model, tailored for engineers researching next-generation, high-throughput, and ultra-low-latency systems. We will dissect the interplay between the managed heap, the thread-local stack, and the often-overlooked native memory segments, paying particular attention to the boundaries where the JVM's automatic guarantees break down.
+This page covers what every Java developer should know about JVM memory.
 
----
+## The Java memory model (high level)
 
-## I. The Tripartite Memory Model: Heap, Stack, and the Native Frontier
+### Heap
 
-To understand modern memory engineering in Java, one must first discard the notion of a single, monolithic "Java memory space." The reality is a complex, segmented resource pool governed by distinct allocation rules and lifecycle policies.
+Where objects live. Subject to garbage collection.
 
-### A. The Managed Heap: The Labyrinth of Object Graphs
+Subdivided by GC algorithm.
 
-The Heap is the primary area where all dynamically allocated objects reside. It is the domain of the Garbage Collector (GC). For experts, the key takeaway is that the Heap is not a single pool; it is a highly structured, generational hierarchy designed to exploit the **Generational Hypothesis**: *most objects are short-lived.*
+### Stack
 
-#### 1. Generational Structure
-Modern JVMs (like HotSpot) segment the Heap into at least three conceptual areas, though the physical implementation details vary by JVM vendor and version:
+Per-thread. Local variables and method call frames.
 
-*   **Young Generation (Eden Space & Survivor Spaces):** This is where the vast majority of object allocations occur. The rapid turnover here is the GC's primary optimization target. The process involves **Minor GC** cycles. The efficiency of the Copying Collector (e.g., Cheney's algorithm) used here is paramount, as it minimizes write barriers and maximizes locality.
-    *   **Expert Consideration:** The ratio of Eden to Survivor space allocation directly impacts the frequency and efficiency of minor collections. Tuning this ratio is a delicate balance between minimizing pause times and maximizing the throughput of object promotion.
-*   **Old Generation (Tenured Space):** Objects that survive multiple minor GCs are promoted here. These objects are assumed to be long-lived. Collections here (Major GC) are significantly more expensive because the set of live objects is much larger, and the graph traversal is deeper.
-    *   **Expert Consideration:** The promotion threshold (the criteria for moving from Young to Old) is a critical tuning knob. Premature promotion can pollute the Old Gen with objects that would have died shortly after the next minor GC, leading to unnecessary major GC overhead.
-*   **Metaspace (Historically PermGen):** This area stores metadata about the classes themselves—the class structures, method data, and constant pool information. It is *not* part of the object heap in the traditional sense, but it is managed by the JVM runtime.
-    *   **Technical Detail:** The transition from the fixed-size, heap-allocated `PermGen` (pre-Java 8) to the dynamically sized, native-memory-backed `Metaspace` (Java 8+) was a significant architectural improvement. It allowed class loading to scale far beyond the limitations of the fixed heap segment, effectively decoupling metadata overhead from the primary object allocation pool.
+Cleaned up automatically when methods return.
 
-#### 2. The Mechanics of Reachability and Tracing
-The GC operates on the principle of **reachability**. An object is considered "live" if there is an active path of references from a set of *GC Roots*.
+### Metaspace
 
-*   **GC Roots:** These are the starting points for the graph traversal. They include:
-    *   Local variables currently on the thread stack.
-    *   Active threads (Thread objects).
-    *   Static fields of loaded classes.
-    *   JNI references.
-*   **The Write Barrier:** This is perhaps the most academically interesting mechanism. When the GC needs to determine if an object in the Old Generation points to an object in the Young Generation (a cross-generational reference), it cannot simply scan all pointers, as that would negate the performance gains of generational collection. The **Write Barrier** intercepts *every* write operation (`field = newObject()`) to track these pointers.
-    *   **Research Angle:** Modern concurrent collectors (like ZGC or Shenandoah) employ sophisticated write barrier techniques, often involving *card marking* or *pointer tagging*, to minimize the overhead of tracking these inter-generational pointers, moving the cost from the GC cycle to the write operation itself.
+Class metadata, method bytecode (since Java 8 — replaced PermGen).
 
-### B. The Thread Stack: Deterministic, Local, and Ephemeral
+Grows as classes load.
 
-The Stack is fundamentally different from the Heap. It is *not* managed by the Garbage Collector. It is managed by the operating system and the JVM's thread execution context.
+### Off-heap
 
-*   **Allocation Unit:** The Stack allocates **Stack Frames**. Each thread gets its own private stack segment.
-*   **Contents:** A stack frame holds:
-    1.  Local primitive variables (e.g., `int`, `boolean`).
-    2.  References (pointers) to objects residing on the Heap.
-    3.  Return addresses and method parameters.
-*   **Lifecycle:** Allocation and deallocation are perfectly deterministic: they happen upon method entry (`push`) and method exit (`pop`). There is no "garbage collection" in the traditional sense; the memory is reclaimed instantly when the stack frame is popped.
-*   **Expert Pitfall:** The primary risk here is **StackOverflowError**. This occurs when the recursion depth exceeds the stack size limit allocated to the thread by the JVM startup parameters (e.g., `-Xss`). Understanding the stack limit is crucial for deep recursive algorithms or complex call chains.
+Direct ByteBuffers, native memory. Not GC-managed.
 
-### C. Native Memory and the Off-Heap Frontier
+Used for I/O, native libraries, some caches.
 
-This is where the discussion moves from standard JVM guarantees to advanced systems programming. Native memory refers to any memory allocated outside the JVM's direct control—memory managed by the OS or explicitly requested by the JVM via JNI or specialized APIs.
+## Heap structure (generational)
 
-*   **The Problem:** When [performance profiling](PerformanceProfiling) reveals that the GC pauses are acceptable, but the overall throughput is limited by memory bandwidth or predictable latency is required, the answer often lies *off-heap*.
-*   **Mechanisms:**
-    *   **`java.nio.ByteBuffer.allocateDirect()`:** This is the canonical example. It allocates memory outside the Java heap, typically backed by native OS memory. The JVM *knows* this memory exists, but it does not track its liveness via object graphs.
-    *   **JNI (Java Native Interface):** Direct interaction with C/C++ memory allocation routines (`malloc`, `calloc`, etc.).
-*   **The Danger:** In this space, the developer assumes the role of the memory manager. Failure to explicitly release this memory results in **Native Memory Leaks**, which are invisible to standard Java heap monitoring tools (like JVisualVM or GC Viewer) because the leak is occurring outside the JVM's managed heap boundaries.
+Most JVM GCs use generational hypothesis: most objects die young.
 
----
+### Young generation
 
-## II. Advanced GC Theory and Performance Implications
+- Eden space: where new objects are allocated
+- Two survivor spaces (S0, S1): hold survivors of minor GC
 
-For researchers, the goal is often not just to *use* the GC, but to *predict* and *control* its behavior to meet Service Level Objectives (SLOs) regarding latency.
+Minor GC: collects young gen. Fast.
 
-### A. The Illusion of Control: Why Explicit GC Calls Fail
+Surviving objects move to other survivor space, then to old gen after enough survivals.
 
-A common misconception, often encountered by those new to the nuances of the JVM, is the belief that calling `System.gc()` forces a collection.
+### Old generation (tenured)
 
-**Reality Check:** As noted in the context snippets, Java provides no mechanism for explicit memory management. Calling `System.gc()` is merely a *suggestion* to the JVM. The JVM runtime is free to ignore it entirely if it deems the current memory pressure insufficient or if its internal heuristics suggest that a collection is premature.
+Long-lived objects. Larger than young gen typically.
 
-**Theoretical Implication:** The GC is a complex, adaptive system. It uses internal heuristics (e.g., monitoring allocation rates, observing object survival rates) to decide when the cost of *not* collecting outweighs the cost of pausing execution. Attempting to force collection is akin to asking a highly optimized engine to idle on command—it might comply, but it gains no predictive advantage.
+Major GC: collects old gen. Slower.
 
-### B. Analyzing GC Pause Times and Throughput Trade-offs
+Full GC: collects entire heap. Slowest; usually a problem if frequent.
 
-The core tension in high-performance Java is the trade-off between **Throughput** and **Latency**.
+## Garbage collectors
 
-1.  **Throughput Optimization (e.g., Parallel GC):** These collectors aim to maximize the percentage of time the application is doing useful work relative to the total time elapsed. They are often aggressive, performing large, comprehensive sweeps, which can lead to longer, but less frequent, "Stop-The-World" (STW) pauses.
-2.  **Latency Optimization (e.g., ZGC, Shenandoah):** These collectors are designed to keep STW pauses extremely short, often sub-millisecond, even with massive heaps. They achieve this by performing the bulk of the marking and compaction work *concurrently* with the application threads.
+### Serial GC
 
-**The Research Focus:** When researching new techniques, one must model the application's workload against the collector's strengths.
-*   If the workload is dominated by massive, sustained data processing (high throughput, latency tolerance $\approx$ seconds), a throughput collector might suffice.
-*   If the workload involves request handling (low latency, high concurrency, latency tolerance $\approx$ milliseconds), a concurrent, low-pause collector is mandatory.
+Single-threaded. Simple. For small applications or where simplicity matters.
 
-### C. Write Barriers, Read Barriers, and Memory Consistency Models
+`-XX:+UseSerialGC`
 
-At the deepest level, GC relies on maintaining a consistent view of the object graph across concurrent operations.
+### Parallel GC
 
-*   **Write Barrier (Revisited):** As discussed, this tracks pointer modifications.
-*   **Read Barrier (Advanced):** Some advanced memory models or specialized collectors might employ read barriers. A read barrier intercepts *reads* of a reference. This is used in scenarios where the object graph might be mutated *during* a read operation by another thread or the GC itself. While less common in standard Java GC implementations than write barriers, understanding its concept is vital when integrating Java with other memory-managed languages or hardware accelerators.
+Multi-threaded but stop-the-world. Good throughput; long pauses.
 
-**Mathematical Consideration (Conceptual):** The overhead ($\Omega_{overhead}$) introduced by a barrier mechanism can be modeled as a function of the write frequency ($\lambda_w$) and the complexity of the barrier check ($C_{barrier}$):
-$$\Omega_{overhead} \approx \lambda_w \cdot C_{barrier}$$
-The goal of modern collectors is to drive $C_{barrier}$ towards $O(1)$ while maintaining correctness across concurrent execution paths.
+Default before Java 9.
 
----
+`-XX:+UseParallelGC`
 
-## III. Off-Heap Memory and Deterministic Control
+### CMS (Concurrent Mark Sweep)
 
-For the expert researcher, the limitations of the GC are often the most valuable research topic. The solution frequently involves bypassing the GC entirely for specific [data structures](DataStructures).
+Mostly concurrent old-gen collection. Lower latency than Parallel.
 
-### A. Direct Byte Buffers and Memory Mapping
+Removed in Java 14. Don't use for new applications.
 
-The `ByteBuffer` class, particularly when allocated directly, is the gateway to predictable memory.
+### G1 GC
 
-```java
-// Example of Direct Buffer Allocation
-ByteBuffer directBuffer = ByteBuffer.allocateDirect(1024 * 1024); // 1MB off-heap
-// This memory is not tracked by the Java Heap GC.
-```
+Default since Java 9. Region-based heap; concurrent and parallel phases.
 
-**Lifecycle Management:** The crucial element here is the **Deallocation Hook**. Since the GC doesn't track this memory, the developer must ensure it is released. This is typically achieved via `sun.misc.Cleaner` (or its modern equivalents, depending on the JDK version) or by wrapping the resource in a `try-with-resources` block if the underlying library supports it. Failure to explicitly trigger cleanup leads to the native memory leak described earlier.
+Configurable target pause time:
+`-XX:MaxGCPauseMillis=200`
 
-### B. JNI and Manual Resource Management
+Good general-purpose default.
 
-When using JNI, the developer is effectively writing C/C++ code that interacts with the JVM. In this context, the Java side must treat the native pointer as a **handle** or **opaque reference**.
+### ZGC
 
-1.  **The Handle Pattern:** The Java object should *never* hold the raw pointer directly if that pointer's lifetime is managed externally. Instead, it should hold a unique ID or handle.
-2.  **The Cleanup Contract:** The Java object must implement a `Closeable` interface, and the calling code *must* guarantee that `close()` is called, which in turn invokes the native cleanup routine (`free(pointer)`).
+Sub-millisecond pauses. For very low-latency applications.
 
-**Pseudocode Illustration (Conceptual):**
+Production-ready since Java 15.
 
-```pseudocode
-class NativeResource implements AutoCloseable {
-    private long nativeHandle; // Opaque handle, not the pointer itself
+`-XX:+UseZGC`
 
-    public NativeResource(Pointer p) {
-        this.nativeHandle = p;
-    }
+Pays in throughput for latency.
 
-    @Override
-    public void close() {
-        // Call the native method to free the memory associated with the handle
-        NativeLib.freeMemory(this.nativeHandle); 
-    }
-}
+### Shenandoah
 
-// Usage: Guarantees cleanup even if exceptions occur
-try (NativeResource resource = new NativeResource(malloc(size))) {
-    // Use the resource
-} // resource.close() is automatically called here
-```
+Like ZGC: ultra-low pauses. Red Hat-developed.
 
-### C. Memory-Mapped Files (`MappedByteBuffer`)
+`-XX:+UseShenandoahGC`
 
-For datasets that exceed available RAM or require persistence guarantees, memory-mapped files are superior. The OS handles the paging mechanism, treating the file on disk as if it were directly in memory.
+### Epsilon
 
-*   **Benefit:** The OS's virtual memory manager handles the dirty tracking and synchronization, abstracting away the need for manual `read()`/`write()` calls and providing a more predictable access pattern than pure heap allocation for large, structured datasets.
-*   **Caveat:** While the access pattern is memory-like, the underlying I/O operations are still subject to OS scheduling and disk latency, which must be factored into performance modeling.
+No-op GC. Useful for benchmarking allocation paths or for very short-lived JVMs that won't GC.
 
----
+## GC tuning basics
 
-## IV. Advanced JVM Tuning and Predictive Modeling
+### Heap sizing
 
-For the expert, tuning is not about setting flags; it's about understanding the underlying resource constraints and modeling the system's behavior under stress.
+`-Xms` initial, `-Xmx` max heap.
 
-### A. Analyzing GC Behavior with Advanced Profilers
+For server applications, set `-Xms = -Xmx` to avoid resizing pauses.
 
-Standard GC viewers are useful for identifying *where* memory is accumulating (the leak source). However, for performance research, one needs tools that profile *behavior* over time:
+Default: 25% of physical memory (varies).
 
-1.  **JFR (Java Flight Recorder):** This is the gold standard. It allows recording detailed, low-overhead metrics on object allocation rates, lock contention, method execution times, and, critically, the *duration* and *cause* of GC pauses, often down to the microsecond level.
-2.  **Heap Dump Analysis:** Analyzing a heap dump (`.hprof`) is useful for *snapshot* analysis (what is alive *now*). However, it cannot diagnose *why* an object became unreachable or *when* a leak started. It only shows the current state of the graph.
+### Generational sizing
 
-### B. The Role of JVM Parameters in Memory Budgeting
+For G1 and others, mostly automatic. For older GCs, you can tune young gen ratio.
 
-Understanding the parameters allows the researcher to simulate different operational environments:
+### Pause time targets
 
-*   `-Xms` and `-Xmx`: Setting the initial and maximum heap size. While setting them equal (`-Xms<size> -Xmx<size>`) prevents the JVM from spending time resizing the heap (a minor performance gain), it does *not* guarantee optimal memory usage.
-*   **GC Algorithm Selection:** Explicitly selecting the collector (`-XX:+UseG1GC`, `-XX:+UseZGC`, etc.) is a performance decision based on the expected workload profile (throughput vs. latency).
+For G1: `-XX:MaxGCPauseMillis=200` (target, not guarantee).
 
-### C. The Concept of Memory Budgeting and Failure Modes
+ZGC, Shenandoah: pauses sub-ms by design.
 
-In mission-critical systems, the goal is often to *fail gracefully* rather than fail unpredictably.
+### GC logging
 
-*   **OOM vs. Resource Exhaustion:** A standard `OutOfMemoryError: Java heap space` is a failure of the *managed* pool. A failure due to native memory exhaustion (e.g., running out of OS virtual address space, or failing to allocate a direct buffer) will manifest differently, often as a segmentation fault or a different, less descriptive `OutOfMemoryError`.
-*   **Defensive Programming:** Expert systems must wrap all resource acquisition (Heap, Stack, Native) in `try-finally` blocks to ensure deterministic cleanup, even when exceptions propagate up the stack.
+Always enable in production:
+`-Xlog:gc*:file=gc.log:time,uptime,level,tags`
 
----
+Use tools (GCViewer, GCEasy) to analyze.
 
-## V. Emerging Paradigms: Beyond the JVM Model
+## Object lifecycle
 
-The academic research surrounding Java memory management is constantly pushing against the boundaries of the JVM's inherent design.
+### Allocation
 
-### A. GraalVM and Ahead-Of-Time (AOT) Compilation
+Most allocations are in Eden. Bump pointer is fast.
 
-GraalVM represents a paradigm shift away from the traditional JIT (Just-In-Time) compilation model.
+For very large objects, may go directly to old gen or "humongous" region in G1.
 
-*   **The Impact:** AOT compilation analyzes the entire application graph *before* runtime. It can perform deep, whole-program optimizations that the JIT compiler, which sees code incrementally, cannot.
-*   **Memory Implications:** In AOT mode, the runtime environment is more constrained and predictable. The memory layout and object relationships are fixed at build time, potentially allowing for more aggressive, compile-time memory optimizations that reduce runtime overhead associated with dynamic class loading or runtime type checking.
-*   **Research Focus:** Investigating how AOT compilation affects the runtime behavior of the Write Barrier—does the compiler know enough about the object graph to eliminate the need for runtime checks entirely?
+### TLABs (Thread-Local Allocation Buffers)
 
-### B. Project Panama and Foreign Function & Memory API (FFM)
+Each thread has its own Eden chunk. No locking for allocation.
 
-Project Panama is arguably the most significant development for advanced memory control since the introduction of NIO. It aims to provide a standardized, safe, and high-performance way to interact with native code and memory *without* relying solely on the brittle mechanisms of JNI.
+Fast path is just a pointer increment.
 
-*   **The Promise:** FFM allows Java code to directly access and manipulate memory addresses and call native functions with minimal overhead, bridging the gap between managed and unmanaged memory far more cleanly than previous APIs.
-*   **Expert Utility:** This API empowers the developer to build complex data structures (like custom memory pools, specialized graph databases, or high-speed networking buffers) that live entirely off-heap, while still allowing the Java layer to manage the *lifecycle* of the handle pointing to that memory.
+### Promotion
 
-### C. Alternative Memory Models: Linear Types and Ownership
+Objects that survive enough minor GCs move to old gen.
 
-For the bleeding edge, the research community is looking toward concepts borrowed from functional programming and systems languages (like Rust) that enforce **Ownership** and **Borrowing** at compile time.
+Promotion happens during minor GC.
 
-*   **The Goal:** To eliminate the entire class of bugs related to memory management (use-after-free, double-free, data races) *statically*.
-*   **Java's Challenge:** Java's inherent design prioritizes developer convenience and runtime safety over compile-time memory guarantees. Implementing true ownership semantics would require a fundamental overhaul of the JVM's type system, potentially leading to a "Java 3.0" that is less forgiving but vastly more predictable in its resource usage.
+### Reclamation
 
----
+Objects without references become garbage; GC reclaims memory.
 
-## Conclusion: The Expert's Mindset
+## Reference types
 
-To summarize this exhaustive survey: Java memory management is not a single system; it is a layered, multi-faceted contract between the developer, the JVM runtime, the operating system, and the hardware.
+### Strong reference
 
-For the expert researching new techniques, the key realization is that **the GC is a powerful, adaptive heuristic engine, not a deterministic resource allocator.**
+Normal reference. Object alive while reachable.
 
-1.  **When to trust the GC:** When the workload is general-purpose, and the primary metric is overall throughput, allowing for occasional, predictable pauses.
-2.  **When to bypass the GC:** When the workload demands hard, predictable latency guarantees (e.g., high-frequency trading, real-time simulation). In these cases, the developer must assume the role of the memory manager, utilizing `ByteBuffer.allocateDirect()` or FFM to manage memory outside the GC's purview, accepting the corresponding burden of manual cleanup.
-3.  **The Future:** The trajectory points toward greater explicit control. Tools like GraalVM and Project Panama are not just performance enhancements; they are architectural shifts that allow Java to participate in memory-intensive domains previously reserved for C++ or Rust, by providing safe, high-performance pathways to the raw memory substrate.
+### Soft reference
 
-Mastering Java memory management at this level means understanding not just *what* the JVM does, but *why* it does it, and more importantly, *where* and *how* it can be safely circumvented or augmented to meet the most stringent performance requirements. It is a continuous process of profiling, hypothesizing, and breaking the system to understand its true limits.
+GC may collect when memory is tight. Used for caches.
+
+### Weak reference
+
+Collected at next GC. Used for canonical maps, listener registries.
+
+### Phantom reference
+
+Notification on collection. Used for cleanup.
+
+## Common memory issues
+
+### Memory leaks
+
+Objects retained accidentally:
+- Static collections growing
+- Listeners not removed
+- ThreadLocals not cleaned up
+- Cache without eviction
+
+Symptom: heap grows over time; eventually OOM.
+
+Tools: heap dumps, jmap, MAT (Memory Analyzer Tool), VisualVM.
+
+### Excessive allocation
+
+High allocation rate → frequent minor GC → high CPU overhead.
+
+Common causes:
+- Boxing in hot loops
+- String concatenation in loops
+- Excessive intermediate objects
+
+Profiling shows allocation hotspots.
+
+### Long pauses
+
+Full GCs or long old-gen collections.
+
+Causes:
+- Heap too small
+- Bad GC choice
+- Old gen fragmentation
+- Concurrent mark fails
+
+### Off-heap leaks
+
+DirectByteBuffer not released. Native libraries.
+
+Doesn't show in heap dump. Harder to diagnose.
+
+## Diagnostic tools
+
+### jcmd
+
+Comprehensive command-line tool. Heap dump, GC info, thread dumps.
+
+`jcmd <pid> GC.heap_dump filename.hprof`
+
+### jstat
+
+Live GC statistics.
+
+`jstat -gc <pid> 1000` shows GC stats every second.
+
+### VisualVM / JMC (Java Mission Control)
+
+GUI tools for live profiling.
+
+JMC's flight recorder is excellent and now open source.
+
+### MAT (Eclipse Memory Analyzer)
+
+Analyze heap dumps. Find memory leaks.
+
+### Async-profiler
+
+Low-overhead sampling profiler. Shows allocation hotspots.
+
+## Production monitoring
+
+Track:
+- Heap usage (after GC)
+- GC frequency
+- GC pause time (especially p99)
+- Old-gen growth rate
+- Allocation rate
+
+Sudden changes in any of these signal trouble.
+
+## Memory issues by symptom
+
+### "OutOfMemoryError: Java heap space"
+
+Heap full; can't allocate.
+
+Diagnose: heap dump, find dominant retained objects.
+
+### "OutOfMemoryError: GC overhead limit exceeded"
+
+Too much time in GC, too little reclaimed. Heap too small or memory leak.
+
+### "OutOfMemoryError: Direct buffer memory"
+
+Off-heap (Direct buffers) exhausted.
+
+Tune `-XX:MaxDirectMemorySize`.
+
+### "OutOfMemoryError: Metaspace"
+
+Too many classes loaded.
+
+Common with classloader leaks (frameworks reloading apps).
+
+### Long pauses
+
+GC issue. Profile GC.
+
+### High CPU but low throughput
+
+Excessive GC. Tune or reduce allocations.
+
+## Best practices
+
+### Object pooling — usually not
+
+Modern GCs handle short-lived objects well. Pooling is rarely worth complexity.
+
+Exception: very large objects, expensive to create (DB connections, threads).
+
+### Prefer primitives
+
+Avoid boxing in hot paths. Use IntStream over Stream<Integer>.
+
+### Reuse buffers
+
+For I/O paths, byte[] buffers can be reused.
+
+### Avoid String concatenation in loops
+
+Use StringBuilder.
+
+### Watch ThreadLocals
+
+Especially with thread pools — values persist across uses.
+
+### Profile before tuning
+
+Default GC is usually fine. Tune based on measured problems.
+
+## When to switch GC
+
+Default G1 is good for most. Switch to ZGC/Shenandoah if:
+- Pause time matters more than throughput
+- Heap is large (>32GB)
+- p99 latency requirements are tight
+
+For batch jobs: Parallel GC may give better throughput.
+
+## Container considerations
+
+Java in containers historically saw host memory, not container limit.
+
+Java 10+: respects container limits (`-XX:+UseContainerSupport`, default since Java 11).
+
+Set heap as fraction of container memory: `-XX:MaxRAMPercentage=75`.
+
+## Memory tuning workflow
+
+1. Run with default GC; measure
+2. If GC is a problem (high pause times, OOM):
+   - Enable GC logging
+   - Profile with JMC or async-profiler
+3. Identify root cause:
+   - Heap too small? Increase
+   - Memory leak? Heap dump analysis
+   - High allocation rate? Profile allocations
+4. Tune specifically for the problem
+5. Re-measure
+
+Don't tune blindly. JVM defaults are reasonable.
+
+## Further Reading
+
+- [MemoryArchitectures](MemoryArchitectures) — Hardware memory
+- [MemoryManagementFundamentals](MemoryManagementFundamentals) — General memory management
+- [Java Hub](Java+Hub) — Cluster index
